--- a/datastructure/pom.xml
+++ b/datastructure/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.lsy</groupId>
-    <artifactId>design-mode</artifactId>
+    <groupId>com.lsu</groupId>
+    <artifactId>datastructure</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
