--- a/distributed/pom.xml
+++ b/distributed/pom.xml
@@ -5,15 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.lsy</groupId>
-    <artifactId>threads</artifactId>
+    <artifactId>distributed</artifactId>
     <version>1.0-SNAPSHOT</version>
-
     <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13</version>
-        </dependency>
         <!-- ZK -->
         <dependency>
             <groupId>org.apache.zookeeper</groupId>
@@ -36,9 +30,7 @@
             <version>4.0.1</version>
         </dependency>
         <!-- ZK -->
-
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
