--- a/oop/pom.xml
+++ b/oop/pom.xml
@@ -14,6 +14,12 @@
             <artifactId>junit</artifactId>
             <version>4.13</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>20.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
