--- a/designmode/pom.xml
+++ b/designmode/pom.xml
@@ -48,6 +48,12 @@
             <version>1.7.25</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
