--- a/oop/pom.xml
+++ b/oop/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.lsy</groupId>
-    <artifactId>layout_schema</artifactId>
+    <artifactId>oop</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
@@ -15,4 +15,5 @@
             <version>4.12</version>
         </dependency>
     </dependencies>
+
 </project>
