--- a/.gitignore
+++ b/.gitignore
@@ -24,5 +24,7 @@ target/
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+# virtual machine crash logs
+# http://www.java.com/en/download/help/error_hotspot.xml
+# 虚拟机器崩溃日志
 hs_err_pid*
