'添加命令行模式、代码优化'

--- a/designpattern/pom.xml
+++ b/designpattern/pom.xml
@@ -240,6 +240,12 @@
             <version>4.12</version>
             <scope>compile</scope>
         </dependency>
+        <!-- 命令行参数解析器 -->
+        <dependency>
+            <groupId>com.beust</groupId>
+            <artifactId>jcommander</artifactId>
+            <version>1.72</version>
+        </dependency>
     </dependencies>
 
 </project>
