--- a/java8/pom.xml
+++ b/java8/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.lsy</groupId>
-    <artifactId>oop</artifactId>
+    <groupId>org.example</groupId>
+    <artifactId>java8</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
@@ -24,24 +24,4 @@
         </dependency>
     </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <!--mvn插件-->
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <!--编码-->
-                    <encoding>UTF-8</encoding>
-                    <!--目标版本-->
-                    <target>8</target>
-                    <!--代码版本-->
-                    <source>8</source>
-                    <!--跳过单元测试-->
-                    <skip>true</skip>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 </project>
