--- a/java8/pom.xml
+++ b/java8/pom.xml
@@ -22,6 +22,18 @@
             <version>20.0</version>
             <scope>compile</scope>
         </dependency>
+        <!--java邮件-->
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>5.1.9.RELEASE</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
