--- a/threads/pom.xml
+++ b/threads/pom.xml
@@ -14,6 +14,13 @@
             <artifactId>junit</artifactId>
             <version>4.13</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+            <scope>provided</scope>
+        </dependency>
         <!-- ZK -->
         <dependency>
             <groupId>org.apache.zookeeper</groupId>
