--- a/java8/pom.xml
+++ b/java8/pom.xml
@@ -34,6 +34,12 @@
             <version>5.1.9.RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.9</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
